// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render a properly formatted Xcode theme file 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
        <!DOCTYPE plist PUBLIC \\"-//Apple//DTD PLIST 1.0//EN\\" \\"http://www.apple.com/DTDs/PropertyList-1.0.dtd\\">
        <plist version=\\"1.0\\">
          <dict>
            <key>DVTConsoleDebuggerInputTextColor</key>
            <string>1 0.988235 1 1</string>
            <key>DVTConsoleDebuggerOutputTextColor</key>
            <string>0.756863 0.737255 0.760784 1</string>
            <key>DVTConsoleDebuggerPromptTextColor</key>
            <string>0.94902 0.505882 0.266667 1</string>
            <key>DVTConsoleExectuableInputTextColor</key>
            <string>0.756863 0.737255 0.760784 1</string>
            <key>DVTConsoleExectuableOutputTextColor</key>
            <string>1 0.988235 1 1</string>
            <key>DVTConsoleTextBackgroundColor</key>
            <string>0.156863 0.14902 0.160784 1</string>
            <key>DVTConsoleTextInsertionPointColor</key>
            <string>0.8 0.470588 0.980392 1</string>
            <key>DVTConsoleTextSelectionColor</key>
            <string>0.278431 0.258824 0.278431 1</string>
            <key>DVTDebuggerInstructionPointerColor</key>
            <string>0.643137 0.8 0.207843 1</string>
            <key>DVTSourceTextBackground</key>
            <string>0.156863 0.14902 0.160784 1</string>
            <key>DVTSourceTextBlockDimBackgroundColor</key>
            <string>0.635294 0.615686 0.639216 1</string>
            <key>DVTSourceTextInsertionPointColor</key>
            <string>0.8 0.470588 0.980392 1</string>
            <key>DVTSourceTextInvisiblesColor</key>
            <string>0.278431 0.258824 0.278431 1</string>
            <key>DVTSourceTextSelectionColor</key>
            <string>0.278431 0.258824 0.278431 1</string>
            <key>DVTSourceTextSyntaxColors</key>
            <dict>
              <key>xcode.syntax.attribute</key>
              <string>0.643137 0.8 0.207843 1</string>
              <key>xcode.syntax.character</key>
              <string>0.14902 0.788235 0.619608 1</string>
              <key>xcode.syntax.comment</key>
              <string>0.396078 0.376471 0.4 1</string>
              <key>xcode.syntax.comment.doc</key>
              <string>0.517647 0.494118 0.521569 1</string>
              <key>xcode.syntax.comment.doc.keyword</key>
              <string>0.635294 0.615686 0.639216 1</string>
              <key>xcode.syntax.identifier.class</key>
              <string>1 0.823529 0.290196 1</string>
              <key>xcode.syntax.identifier.class.system</key>
              <string>1 0.823529 0.290196 1</string>
              <key>xcode.syntax.identifier.constant</key>
              <string>0.643137 0.8 0.207843 1</string>
              <key>xcode.syntax.identifier.constant.system</key>
              <string>0.643137 0.8 0.207843 1</string>
              <key>xcode.syntax.identifier.function</key>
              <string>0.14902 0.788235 0.619608 1</string>
              <key>xcode.syntax.identifier.function.system</key>
              <string>0.14902 0.788235 0.619608 1</string>
              <key>xcode.syntax.identifier.macro</key>
              <string>0.960784 0.32549 0.74902 1</string>
              <key>xcode.syntax.identifier.macro.system</key>
              <string>0.960784 0.32549 0.74902 1</string>
              <key>xcode.syntax.identifier.type</key>
              <string>1 0.25098 0.313725 1</string>
              <key>xcode.syntax.identifier.type.system</key>
              <string>0.94902 0.505882 0.266667 1</string>
              <key>xcode.syntax.identifier.variable</key>
              <string>1 0.988235 1 1</string>
              <key>xcode.syntax.identifier.variable.system</key>
              <string>1 0.988235 1 1</string>
              <key>xcode.syntax.keyword</key>
              <string>0.4 0.74902 1 1</string>
              <key>xcode.syntax.number</key>
              <string>0.643137 0.8 0.207843 1</string>
              <key>xcode.syntax.plain</key>
              <string>0.878431 0.862745 0.878431 1</string>
              <key>xcode.syntax.preprocessor</key>
              <string>0.8 0.470588 0.980392 1</string>
              <key>xcode.syntax.string</key>
              <string>0.643137 0.8 0.207843 1</string>
              <key>xcode.syntax.url</key>
              <string>0.4 0.74902 1 1</string>
            </dict>
          </dict>
        </plist>"
`;

exports[`render should render a properly formatted Xcode theme file 2`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
        <!DOCTYPE plist PUBLIC \\"-//Apple//DTD PLIST 1.0//EN\\" \\"http://www.apple.com/DTDs/PropertyList-1.0.dtd\\">
        <plist version=\\"1.0\\">
          <dict>
            <key>DVTConsoleDebuggerInputTextColor</key>
            <string>0.156863 0.14902 0.160784 1</string>
            <key>DVTConsoleDebuggerOutputTextColor</key>
            <string>0.396078 0.376471 0.4 1</string>
            <key>DVTConsoleDebuggerPromptTextColor</key>
            <string>0.952941 0.466667 0.207843 1</string>
            <key>DVTConsoleExectuableInputTextColor</key>
            <string>0.396078 0.376471 0.4 1</string>
            <key>DVTConsoleExectuableOutputTextColor</key>
            <string>0.156863 0.14902 0.160784 1</string>
            <key>DVTConsoleTextBackgroundColor</key>
            <string>1 0.988235 1 1</string>
            <key>DVTConsoleTextInsertionPointColor</key>
            <string>0.74902 0.396078 0.941176 1</string>
            <key>DVTConsoleTextSelectionColor</key>
            <string>0.878431 0.862745 0.878431 1</string>
            <key>DVTDebuggerInstructionPointerColor</key>
            <string>0.592157 0.741176 0.176471 1</string>
            <key>DVTSourceTextBackground</key>
            <string>1 0.988235 1 1</string>
            <key>DVTSourceTextBlockDimBackgroundColor</key>
            <string>0.517647 0.494118 0.521569 1</string>
            <key>DVTSourceTextInsertionPointColor</key>
            <string>0.74902 0.396078 0.941176 1</string>
            <key>DVTSourceTextInvisiblesColor</key>
            <string>0.878431 0.862745 0.878431 1</string>
            <key>DVTSourceTextSelectionColor</key>
            <string>0.878431 0.862745 0.878431 1</string>
            <key>DVTSourceTextSyntaxColors</key>
            <dict>
              <key>xcode.syntax.attribute</key>
              <string>0.592157 0.741176 0.176471 1</string>
              <key>xcode.syntax.character</key>
              <string>0.121569 0.772549 0.596078 1</string>
              <key>xcode.syntax.comment</key>
              <string>0.756863 0.737255 0.760784 1</string>
              <key>xcode.syntax.comment.doc</key>
              <string>0.635294 0.615686 0.639216 1</string>
              <key>xcode.syntax.comment.doc.keyword</key>
              <string>0.517647 0.494118 0.521569 1</string>
              <key>xcode.syntax.identifier.class</key>
              <string>0.933333 0.729412 0.129412 1</string>
              <key>xcode.syntax.identifier.class.system</key>
              <string>0.933333 0.729412 0.129412 1</string>
              <key>xcode.syntax.identifier.constant</key>
              <string>0.592157 0.741176 0.176471 1</string>
              <key>xcode.syntax.identifier.constant.system</key>
              <string>0.592157 0.741176 0.176471 1</string>
              <key>xcode.syntax.identifier.function</key>
              <string>0.121569 0.772549 0.596078 1</string>
              <key>xcode.syntax.identifier.function.system</key>
              <string>0.121569 0.772549 0.596078 1</string>
              <key>xcode.syntax.identifier.macro</key>
              <string>0.933333 0.305882 0.721569 1</string>
              <key>xcode.syntax.identifier.macro.system</key>
              <string>0.933333 0.305882 0.721569 1</string>
              <key>xcode.syntax.identifier.type</key>
              <string>0.941176 0.243137 0.301961 1</string>
              <key>xcode.syntax.identifier.type.system</key>
              <string>0.952941 0.466667 0.207843 1</string>
              <key>xcode.syntax.identifier.variable</key>
              <string>0.156863 0.14902 0.160784 1</string>
              <key>xcode.syntax.identifier.variable.system</key>
              <string>0.156863 0.14902 0.160784 1</string>
              <key>xcode.syntax.keyword</key>
              <string>0.32549 0.65098 0.882353 1</string>
              <key>xcode.syntax.number</key>
              <string>0.592157 0.741176 0.176471 1</string>
              <key>xcode.syntax.plain</key>
              <string>0.278431 0.258824 0.278431 1</string>
              <key>xcode.syntax.preprocessor</key>
              <string>0.74902 0.396078 0.941176 1</string>
              <key>xcode.syntax.string</key>
              <string>0.592157 0.741176 0.176471 1</string>
              <key>xcode.syntax.url</key>
              <string>0.32549 0.65098 0.882353 1</string>
            </dict>
          </dict>
        </plist>"
`;
